config class to builder pattern

--- a/metric-publishers/emf-metric-publisher/pom.xml
+++ b/metric-publishers/emf-metric-publisher/pom.xml
@@ -65,6 +65,12 @@
             <version>${awsjavasdk.version}</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>sdk-core</artifactId>
+            <version>${awsjavasdk.version}</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
