--- a/metric-publishers/emf-metric-publisher/pom.xml
+++ b/metric-publishers/emf-metric-publisher/pom.xml
@@ -28,10 +28,6 @@
     <name>AWS Java SDK :: Metric Publishers :: Emf</name>
     <packaging>jar</packaging>
 
-    <properties>
-        <jre.version>1.8</jre.version>
-    </properties>
-
     <build>
         <plugins>
             <plugin>
@@ -70,6 +66,18 @@
             <artifactId>sdk-core</artifactId>
             <version>${awsjavasdk.version}</version>
             <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.networknt</groupId>
+            <artifactId>json-schema-validator</artifactId>
+            <version>1.4.0</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.11.0</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
