--- a/pom.xml
+++ b/pom.xml
@@ -144,6 +144,7 @@
         <jetty.version>9.4.45.v20220203</jetty.version>
         <bytebuddy.version>1.14.15</bytebuddy.version>
         <archunit.version>1.3.0</archunit.version>
+        <json-schema-validator.version>1.5.4</json-schema-validator.version>
 
         <!-- build plugin dependencies-->
         <maven.surefire.version>3.1.2</maven.surefire.version>
