EmfMetricPublisher class added (#5752)
* EmfMetricPublisher class with basic unit test added

* Edge cases handled

* javadoc for class added

* Java doc for methods added

* minor unit test changes

* Change from using jacksonCore directly to using jsonWriter

* EmfMetricConfiguration class added

* MetricEmfConverter class added

* new module checklist done

* checkStyle fixed

* minor build problem fixed

* internal package added

* fixed the issue passing raw objects

* added java clock to unit test

* added unit test for publish method

* minor changes

* config class to builder pattern

* config class to builder pattern

* minor change

* End to end test passed

* added valid case in WARN_LOG allowlist

* unit tests adjusted

* Change logGroupName to required field

* move MetricValueNormalizer class to utils package

* converter implementation changed

* schemaConformTest added

* SchemaConformTest adjusted

* minor change

--- a/test/tests-coverage-reporting/pom.xml
+++ b/test/tests-coverage-reporting/pom.xml
@@ -228,6 +228,11 @@
             <version>${awsjavasdk.version}</version>
         </dependency>
         <dependency>
+            <artifactId>emf-metric-publisher</artifactId>
+            <groupId>software.amazon.awssdk</groupId>
+            <version>${awsjavasdk.version}</version>
+        </dependency>
+        <dependency>
             <artifactId>iam-policy-builder</artifactId>
             <groupId>software.amazon.awssdk</groupId>
             <version>${awsjavasdk.version}</version>
