--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -214,7 +214,7 @@
             </dependency>
             <dependency>
                 <groupId>software.amazon.awssdk</groupId>
-                <artifactId>emf-metric-publisher</artifactId>
+                <artifactId>emf-metric-logging-publisher</artifactId>
                 <version>${awsjavasdk.version}</version>
             </dependency>
             <dependency>
