Add codegen customizations to skip ALPN for existing H2 services

--- a/services/kinesis/src/main/resources/codegen-resources/customization.config
+++ b/services/kinesis/src/main/resources/codegen-resources/customization.config
@@ -52,5 +52,6 @@
         "OperationType not set": "Test is broken for client tests, need operationInputs.",
         "Invalid ARN: Kinesis ARNs only support stream arn types": "Test is broken for client tests, need operationInputs.",
         "RegionMismatch: client region should be used for endpoint region": "Test is broken for client tests, need operationInputs."
-    }
+    },
+    "skipAlpn": true
 }
