--- a/services/lexruntimev2/src/main/resources/codegen-resources/customization.config
+++ b/services/lexruntimev2/src/main/resources/codegen-resources/customization.config
@@ -2,7 +2,6 @@
     "customServiceMetadata": {
         "contentType": "application/json"
     },
-
-    "enableGenerateCompiledEndpointRules": true
-
+    "enableGenerateCompiledEndpointRules": true,
+    "skipAlpn": true
 }
