--- a/services/transcribestreaming/src/main/resources/codegen-resources/customization.config
+++ b/services/transcribestreaming/src/main/resources/codegen-resources/customization.config
@@ -7,5 +7,6 @@
         "TranscriptResultStream": ["TranscriptEvent"],
         "AudioStream": ["AudioEvent"],
         "MedicalTranscriptResultStream": ["TranscriptEvent"]
-      }
+    },
+    "skipAlpn": true
 }
