--- a/services/kinesis/src/main/resources/codegen-resources/customization.config
+++ b/services/kinesis/src/main/resources/codegen-resources/customization.config
@@ -53,5 +53,5 @@
         "Invalid ARN: Kinesis ARNs only support stream arn types": "Test is broken for client tests, need operationInputs.",
         "RegionMismatch: client region should be used for endpoint region": "Test is broken for client tests, need operationInputs."
     },
-    "skipAlpn": true
+    "usePriorKnowledgeForH2": true
 }
