--- a/services/lexruntimev2/src/main/resources/codegen-resources/customization.config
+++ b/services/lexruntimev2/src/main/resources/codegen-resources/customization.config
@@ -3,5 +3,5 @@
         "contentType": "application/json"
     },
     "enableGenerateCompiledEndpointRules": true,
-    "skipAlpn": true
+    "usePriorKnowledgeForH2": true
 }
