--- a/services/transcribestreaming/src/main/resources/codegen-resources/customization.config
+++ b/services/transcribestreaming/src/main/resources/codegen-resources/customization.config
@@ -8,5 +8,5 @@
         "AudioStream": ["AudioEvent"],
         "MedicalTranscriptResultStream": ["TranscriptEvent"]
     },
-    "skipAlpn": true
+    "usePriorKnowledgeForH2": true
 }
