Adds business metrics for credential providers

--- a/pom.xml
+++ b/pom.xml
@@ -631,7 +631,7 @@
                         <includeModules>
                             <includeModule>annotations</includeModule>
                             <includeModule>arns</includeModule>
-                            <includeModule>auth</includeModule>
+<!--                            <includeModule>auth</includeModule>-->
                             <includeModule>auth-crt</includeModule>
                             <includeModule>aws-core</includeModule>
                             <includeModule>crt-core</includeModule>
