--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -214,6 +214,11 @@
             </dependency>
             <dependency>
                 <groupId>software.amazon.awssdk</groupId>
+                <artifactId>emf-metric-logging-publisher</artifactId>
+                <version>${awsjavasdk.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>software.amazon.awssdk</groupId>
                 <artifactId>s3-transfer-manager</artifactId>
                 <version>${awsjavasdk.version}</version>
             </dependency>
