ALPN H2 Support for Netty Client (#5794)
* ALPN H2 support in Netty client

* Add codegen customizations to skip ALPN for existing H2 services

* Add changelog

* Add benchmarks

* Add tests

* Update test

* Update test

* Address comments

* Update test file name

* Revert to checking Java version for ALPN support

* Update Kinesis integ tests

* Propagate exception and close channel

* Add tests and update ALPN support check for OpenSsl

* Set max streams when completing protocol future

* Add test dependencies

* Do not use FATAL_ALERT if OpenSSL is used

* Remove completing future in ALPN handler

* Remove import

* Update ALPN support check to check for getApplicationProtocol method in SSLEngine

* Address comments

* Use Lazy for alpn support check

--- a/services/lexruntimev2/src/main/resources/codegen-resources/customization.config
+++ b/services/lexruntimev2/src/main/resources/codegen-resources/customization.config
@@ -3,5 +3,6 @@
         "contentType": "application/json"
     },
     "enableGenerateCompiledEndpointRules": true,
+    "usePriorKnowledgeForH2": true,
     "enableFastUnmarshaller": false
 }
