--- a/services/transcribestreaming/src/main/resources/codegen-resources/customization.config
+++ b/services/transcribestreaming/src/main/resources/codegen-resources/customization.config
@@ -6,6 +6,7 @@
         "TranscriptResultStream": ["TranscriptEvent"],
         "AudioStream": ["AudioEvent"],
         "MedicalTranscriptResultStream": ["TranscriptEvent"]
-      },
-      "enableFastUnmarshaller": false
+    },
+    "usePriorKnowledgeForH2": true,
+    "enableFastUnmarshaller": false
 }
