--- a/services/kinesis/src/main/resources/codegen-resources/customization.config
+++ b/services/kinesis/src/main/resources/codegen-resources/customization.config
@@ -52,5 +52,6 @@
         "Invalid ARN: Kinesis ARNs only support stream arn types": "Test is broken for client tests, need operationInputs.",
         "RegionMismatch: client region should be used for endpoint region": "Test is broken for client tests, need operationInputs."
     },
+    "usePriorKnowledgeForH2": true,
     "enableFastUnmarshaller": false
 }
