Add Netty test dependency to Kinesis

--- a/services/kinesis/pom.xml
+++ b/services/kinesis/pom.xml
@@ -77,5 +77,10 @@
             <artifactId>http-auth-aws</artifactId>
             <version>${awsjavasdk.version}</version>
         </dependency>
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-handler</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
