Add Netty test dependency to TranscribeStreaming

--- a/services/transcribestreaming/pom.xml
+++ b/services/transcribestreaming/pom.xml
@@ -84,5 +84,10 @@
             <artifactId>http-auth-aws-eventstream</artifactId>
             <version>${awsjavasdk.version}</version>
         </dependency>
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-handler</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
