Enable fast unmarshaller wave two

--- a/services/acmpca/src/main/resources/codegen-resources/customization.config
+++ b/services/acmpca/src/main/resources/codegen-resources/customization.config
@@ -3,5 +3,5 @@
         "listCertificateAuthorities"
     ],
     "enableGenerateCompiledEndpointRules": true,
-    "enableFastUnmarshaller": false
+    "enableFastUnmarshaller": true
 }
