--- a/services/apigateway/src/main/resources/codegen-resources/customization.config
+++ b/services/apigateway/src/main/resources/codegen-resources/customization.config
@@ -25,5 +25,5 @@
         "software.amazon.awssdk.services.apigateway.internal.AcceptJsonInterceptor"
     ],
     "enableGenerateCompiledEndpointRules": true,
-    "enableFastUnmarshaller": false
+    "enableFastUnmarshaller": true
 }
