--- a/services/codecommit/src/main/resources/codegen-resources/customization.config
+++ b/services/codecommit/src/main/resources/codegen-resources/customization.config
@@ -6,5 +6,5 @@
         "getBranch"
     ],
     "enableGenerateCompiledEndpointRules": true,
-    "enableFastUnmarshaller": false
+    "enableFastUnmarshaller": true
 }
