--- a/services/codedeploy/src/main/resources/codegen-resources/customization.config
+++ b/services/codedeploy/src/main/resources/codegen-resources/customization.config
@@ -32,5 +32,5 @@
         "InstanceSummary"
     ],
     "enableGenerateCompiledEndpointRules": true,
-    "enableFastUnmarshaller": false
+    "enableFastUnmarshaller": true
 }
