--- a/services/codepipeline/src/main/resources/codegen-resources/customization.config
+++ b/services/codepipeline/src/main/resources/codegen-resources/customization.config
@@ -9,5 +9,5 @@
         "registerWebhookWithThirdParty"
     ],
     "enableGenerateCompiledEndpointRules": true,
-    "enableFastUnmarshaller": false
+    "enableFastUnmarshaller": true
 }
