--- a/services/devicefarm/src/main/resources/codegen-resources/customization.config
+++ b/services/devicefarm/src/main/resources/codegen-resources/customization.config
@@ -16,5 +16,5 @@
         "listVPCEConfigurations"
     ],
     "enableGenerateCompiledEndpointRules": true,
-    "enableFastUnmarshaller": false
+    "enableFastUnmarshaller": true
 }
