--- a/services/glacier/src/main/resources/codegen-resources/customization.config
+++ b/services/glacier/src/main/resources/codegen-resources/customization.config
@@ -28,5 +28,5 @@
         "software.amazon.awssdk.services.glacier.internal.AcceptJsonInterceptor",
         "software.amazon.awssdk.services.glacier.internal.GlacierExecutionInterceptor"
     ],
-    "enableFastUnmarshaller": false
+    "enableFastUnmarshaller": true
 }
