--- a/services/greengrass/src/main/resources/codegen-resources/customization.config
+++ b/services/greengrass/src/main/resources/codegen-resources/customization.config
@@ -25,5 +25,5 @@
         "createSoftwareUpdateJob"
     ],
     "enableGenerateCompiledEndpointRules": true,
-    "enableFastUnmarshaller": false
+    "enableFastUnmarshaller": true
 }
