--- a/services/lexruntimev2/src/main/resources/codegen-resources/customization.config
+++ b/services/lexruntimev2/src/main/resources/codegen-resources/customization.config
@@ -4,5 +4,5 @@
     },
     "enableGenerateCompiledEndpointRules": true,
     "usePriorKnowledgeForH2": true,
-    "enableFastUnmarshaller": false
+    "enableFastUnmarshaller": true
 }
