--- a/services/mediapackage/src/main/resources/codegen-resources/customization.config
+++ b/services/mediapackage/src/main/resources/codegen-resources/customization.config
@@ -12,5 +12,5 @@
     "__PeriodTriggersElement": "PeriodTriggersElement"
   },
   "enableGenerateCompiledEndpointRules": true,
-  "enableFastUnmarshaller": false
+  "enableFastUnmarshaller": true
 }
