--- a/services/opsworks/src/main/resources/codegen-resources/customization.config
+++ b/services/opsworks/src/main/resources/codegen-resources/customization.config
@@ -22,5 +22,5 @@
         "describeVolumes"
     ],
     "enableGenerateCompiledEndpointRules": true,
-    "enableFastUnmarshaller": false
+    "enableFastUnmarshaller": true
 }
