--- a/services/securityhub/src/main/resources/codegen-resources/customization.config
+++ b/services/securityhub/src/main/resources/codegen-resources/customization.config
@@ -14,5 +14,5 @@
         "getInsights"
     ],
     "enableGenerateCompiledEndpointRules": true,
-    "enableFastUnmarshaller": false
+    "enableFastUnmarshaller": true
 }
