--- a/services/servicecatalog/src/main/resources/codegen-resources/customization.config
+++ b/services/servicecatalog/src/main/resources/codegen-resources/customization.config
@@ -13,5 +13,5 @@
         "getAWSOrganizationsAccessStatus"
     ],
     "enableGenerateCompiledEndpointRules": true,
-    "enableFastUnmarshaller": false
+    "enableFastUnmarshaller": true
 }
