--- a/services/transcribe/src/main/resources/codegen-resources/customization.config
+++ b/services/transcribe/src/main/resources/codegen-resources/customization.config
@@ -4,5 +4,5 @@
         "listTranscriptionJobs",
         "listVocabularies"
     ],
-    "enableFastUnmarshaller": false
+    "enableFastUnmarshaller": true
 }
