--- a/services/wellarchitected/src/main/resources/codegen-resources/customization.config
+++ b/services/wellarchitected/src/main/resources/codegen-resources/customization.config
@@ -3,5 +3,5 @@
         "contentType": "application/json"
     },
     "enableGenerateCompiledEndpointRules": true,
-    "enableFastUnmarshaller": false
+    "enableFastUnmarshaller": true
 }
