--- a/services/workmail/src/main/resources/codegen-resources/customization.config
+++ b/services/workmail/src/main/resources/codegen-resources/customization.config
@@ -3,5 +3,5 @@
         "listOrganizations"
     ],
     "enableGenerateCompiledEndpointRules": true,
-    "enableFastUnmarshaller": false
+    "enableFastUnmarshaller": true
 }
