--- a/services/xray/src/main/resources/codegen-resources/customization.config
+++ b/services/xray/src/main/resources/codegen-resources/customization.config
@@ -15,5 +15,5 @@
         }
     },
     "enableGenerateCompiledEndpointRules": true,
-    "enableFastUnmarshaller": false
+    "enableFastUnmarshaller": true
 }
