--- a/services/elastictranscoder/src/main/resources/codegen-resources/customization.config
+++ b/services/elastictranscoder/src/main/resources/codegen-resources/customization.config
@@ -7,5 +7,5 @@
         "TestRole"
     ],
     "enableGenerateCompiledEndpointRules": true,
-    "enableFastUnmarshaller": false
+    "enableFastUnmarshaller": true
 }
