--- a/services/mediapackagevod/src/main/resources/codegen-resources/customization.config
+++ b/services/mediapackagevod/src/main/resources/codegen-resources/customization.config
@@ -3,5 +3,5 @@
     // Do not keep adding to this list. Require the service team to name enums like they're naming their shapes.
     "__PeriodTriggersElement": "PeriodTriggersElement"
   },
-  "enableFastUnmarshaller": false
+  "enableFastUnmarshaller": true
 }
