--- a/services/storagegateway/src/main/resources/codegen-resources/customization.config
+++ b/services/storagegateway/src/main/resources/codegen-resources/customization.config
@@ -19,5 +19,5 @@
         }
     },
     "enableGenerateCompiledEndpointRules": true,
-    "enableFastUnmarshaller": false
+    "enableFastUnmarshaller": true
 }
