--- a/v2-migration/src/main/resources/META-INF/rewrite/s3-methods-constructor-to-fluent.yml
+++ b/v2-migration/src/main/resources/META-INF/rewrite/s3-methods-constructor-to-fluent.yml
@@ -241,6 +241,16 @@ recipeList:
         - withBucket
         - withKey
   - software.amazon.awssdk.v2migration.ConstructorToFluent:
+      clzzFqcn: com.amazonaws.services.s3.model.GetObjectAclRequest
+      parameterTypes:
+        - java.lang.String
+        - java.lang.String
+        - java.lang.String
+      fluentNames:
+        - withBucket
+        - withKey
+        - withVersionId
+  - software.amazon.awssdk.v2migration.ConstructorToFluent:
       clzzFqcn: com.amazonaws.services.s3.model.GetObjectMetadataRequest
       parameterTypes:
         - java.lang.String
@@ -349,6 +359,20 @@ recipeList:
         - withDestinationBucket
         - withDestinationKey
   - software.amazon.awssdk.v2migration.ConstructorToFluent:
+      clzzFqcn: com.amazonaws.services.s3.model.CopyObjectRequest
+      parameterTypes:
+        - java.lang.String
+        - java.lang.String
+        - java.lang.String
+        - java.lang.String
+        - java.lang.String
+      fluentNames:
+        - withSourceBucket
+        - withSourceKey
+        - withSourceVersionId
+        - withDestinationBucket
+        - withDestinationKey
+  - software.amazon.awssdk.v2migration.ConstructorToFluent:
       clzzFqcn: com.amazonaws.services.s3.model.ListVersionsRequest
       parameterTypes:
         - java.lang.String
@@ -372,3 +396,123 @@ recipeList:
       fluentNames:
         - withBucket
         - withPolicy
+  - software.amazon.awssdk.v2migration.ConstructorToFluent:
+      clzzFqcn: com.amazonaws.services.s3.model.AbortMultipartUploadRequest
+      parameterTypes:
+        - java.lang.String
+        - java.lang.String
+        - java.lang.String
+      fluentNames:
+        - withBucket
+        - withKey
+        - withUploadId
+  - software.amazon.awssdk.v2migration.ConstructorToFluent:
+      clzzFqcn: com.amazonaws.services.s3.model.BucketAccelerateConfiguration
+      parameterTypes:
+        - com.amazonaws.services.s3.model.BucketAccelerateStatus
+      fluentNames:
+        - withStatus
+  - software.amazon.awssdk.v2migration.ConstructorToFluent:
+      clzzFqcn: com.amazonaws.services.s3.model.SetBucketAccelerateConfigurationRequest
+      parameterTypes:
+        - java.lang.String
+        - com.amazonaws.services.s3.model.BucketAccelerateConfiguration
+      fluentNames:
+        - withBucket
+        - withAccelerateConfiguration
+  - software.amazon.awssdk.v2migration.ConstructorToFluent:
+      clzzFqcn: com.amazonaws.services.s3.model.SetBucketAnalyticsConfigurationRequest
+      parameterTypes:
+        - java.lang.String
+        - com.amazonaws.services.s3.model.analytics.AnalyticsConfiguration
+      fluentNames:
+        - withBucket
+        - withAnalyticsConfiguration
+  - software.amazon.awssdk.v2migration.ConstructorToFluent:
+      clzzFqcn: com.amazonaws.services.s3.model.SetBucketLifecycleConfigurationRequest
+      parameterTypes:
+        - java.lang.String
+        - com.amazonaws.services.s3.model.BucketLifecycleConfiguration
+      fluentNames:
+        - withBucket
+        - withLifecycleConfiguration
+  - software.amazon.awssdk.v2migration.ConstructorToFluent:
+      clzzFqcn: com.amazonaws.services.s3.model.SetBucketMetricsConfigurationRequest
+      parameterTypes:
+        - java.lang.String
+        - com.amazonaws.services.s3.model.metrics.BucketMetricsConfiguration
+      fluentNames:
+        - withBucket
+        - withMetricsConfiguration
+  - software.amazon.awssdk.v2migration.ConstructorToFluent:
+      clzzFqcn: com.amazonaws.services.s3.model.SetBucketNotificationConfigurationRequest
+      parameterTypes:
+        - java.lang.String
+        - com.amazonaws.services.s3.model.BucketNotificationConfiguration
+      fluentNames:
+        - withBucket
+        - withNotificationConfiguration
+  - software.amazon.awssdk.v2migration.ConstructorToFluent:
+      clzzFqcn: com.amazonaws.services.s3.model.SetBucketOwnershipControlsRequest
+      parameterTypes:
+        - java.lang.String
+        - com.amazonaws.services.s3.model.ownership.OwnershipControls
+      fluentNames:
+        - withBucket
+        - withOwnershipControls
+  - software.amazon.awssdk.v2migration.ConstructorToFluent:
+      clzzFqcn: com.amazonaws.services.s3.model.SetBucketTaggingConfigurationRequest
+      parameterTypes:
+        - java.lang.String
+        - com.amazonaws.services.s3.model.BucketTaggingConfiguration
+      fluentNames:
+        - withBucket
+        - withTagging
+  - software.amazon.awssdk.v2migration.ConstructorToFluent:
+      clzzFqcn: com.amazonaws.services.s3.model.SetBucketWebsiteConfigurationRequest
+      parameterTypes:
+        - java.lang.String
+        - com.amazonaws.services.s3.model.BucketWebsiteConfiguration
+      fluentNames:
+        - withBucket
+        - withWebsiteConfiguration
+  - software.amazon.awssdk.v2migration.ConstructorToFluent:
+      clzzFqcn: com.amazonaws.services.s3.model.SetBucketReplicationConfigurationRequest
+      parameterTypes:
+        - java.lang.String
+        - com.amazonaws.services.s3.model.BucketReplicationConfiguration
+      fluentNames:
+        - withBucket
+        - withReplicationConfiguration
+  - software.amazon.awssdk.v2migration.ConstructorToFluent:
+      clzzFqcn: com.amazonaws.services.s3.model.SetBucketMetricsConfigurationRequest
+      parameterTypes:
+        - java.lang.String
+        - com.amazonaws.services.s3.model.metrics.MetricsConfiguration
+      fluentNames:
+        - withBucket
+        - withMetricsConfiguration
+  - software.amazon.awssdk.v2migration.ConstructorToFluent:
+      clzzFqcn: com.amazonaws.services.s3.model.SetBucketIntelligentTieringConfigurationRequest
+      parameterTypes:
+        - java.lang.String
+        - com.amazonaws.services.s3.model.intelligenttiering.IntelligentTieringConfiguration
+      fluentNames:
+        - withBucket
+        - withIntelligentTieringConfiguration
+  - software.amazon.awssdk.v2migration.ConstructorToFluent:
+      clzzFqcn: com.amazonaws.services.s3.model.SetBucketInventoryConfigurationRequest
+      parameterTypes:
+        - java.lang.String
+        - com.amazonaws.services.s3.model.inventory.InventoryConfiguration
+      fluentNames:
+        - withBucket
+        - withInventoryConfiguration
+  - software.amazon.awssdk.v2migration.ConstructorToFluent:
+      clzzFqcn: com.amazonaws.services.s3.model.PartETag
+      parameterTypes:
+        - java.lang.Integer
+        - java.lang.String
+      fluentNames:
+        - withPartNumber
+        - withETag
