Import evenstream library
Import from https://github.com/awslabs/aws-eventstream-java/commit/1e76ef478f0108b38e2d7b70b598b4e5f0def3d1

`aws-eventstream-java` was meant as a reference implementation; this is
a source import of this library so that we can customize it for our
needs, e.g. changing or removing built-in validations.

--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -247,6 +247,11 @@
                 <artifactId>endpoints-spi</artifactId>
                 <version>${awsjavasdk.version}</version>
             </dependency>
+            <dependency>
+                <groupId>software.amazon.awssdk</groupId>
+                <artifactId>eventstream</artifactId>
+                <version>${awsjavasdk.version}</version>
+            </dependency>
             <!-- Services -->
             <dependency>
                 <groupId>software.amazon.awssdk</groupId>
